--- a/src/reset.scss
+++ b/src/reset.scss
@@ -2,10 +2,18 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-size: 16px;
   font-family: 'Montserrat';
   list-style: none;
+}
+
+img{
+  margin: 0;
+  padding: 0;
+}
+
+body{
   background-color: $light;
+  font-size: 16px;
 }
 
 h1,
@@ -62,5 +70,7 @@ p {
 a,
 a:hover,
 a:visited {
-  color: $primary;
+  color: $dark;
+  cursor: pointer;
+  border: 0;
 }
